<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#062E40">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalEnd2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <TextView
        android:id="@+id/domanda_arg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:background="@drawable/question_background"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalStart"
        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalEnd"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/risposta1_arg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalEnd2"
        />


    <Button
        android:id="@+id/risposta2_arg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/risposta1_arg"
        />
    <Button
        android:id="@+id/risposta3_arg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/risposta2_arg"
        />
    <Button
        android:id="@+id/risposta4_arg"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@id/risposta3_arg"
        />



</androidx.constraintlayout.widget.ConstraintLayout>