...
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/domanda"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:background="@color/white"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="100dp"
...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/hello_blank_fragment"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/risposta1"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="@id/domanda"
        app:layout_constraintStart_toStartOf="@id/domanda"
...
